upgrade to spring boot 4.0, java 25 and supportriscv64
feat: upgrade to spring boot 4.0 and java 25

- Update base images in Dockerfile to use Java 25
- Replace oshi-core with oshi-core-java25 for FFM support
- Enable virtual threads in application.properties
- Update pom.xml with Java 25 configuration
- add riscv64
- java 25