@@ -1,5 +1,5 @@
 # Base image with Maven installed already
-FROM maven:3.9-eclipse-temurin-21 AS builder
+FROM maven:3.9-eclipse-temurin-25 AS builder
 
 # Copy the entire project into the Docker image
 COPY . .
@@ -7,8 +7,8 @@ COPY . .
 # Build project
 RUN mvn clean package
 
-# Base image containing OpenJDK 21
-FROM eclipse-temurin:21-jre
+# Base image containing OpenJDK 25
+FROM eclipse-temurin:25-jre
 
 # Copy the JAR file and pom.xml from the builder image to the working directory
 COPY --from=builder target/*.jar /ward.jar
@@ -17,5 +17,8 @@ COPY --from=builder pom.xml /pom.xml
 # Expose port 4000
 EXPOSE 4000
 
+# Set production profile
+ENV SPRING_PROFILES_ACTIVE=prod
+
 # Run the JAR file as sudo user on entry point
-ENTRYPOINT ["java", "-jar", "ward.jar"]
+ENTRYPOINT ["java", "--enable-native-access=ALL-UNNAMED", "-XX:MaxRAMPercentage=75.0", "-XX:+UseSerialGC", "-jar", "ward.jar"]
